Update index.html (sync)

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1193270637876228218/1231347370860740769/maxresdefault_11.jpg?ex=6636a09a&is=66242b9a&hm=46037d43b0fa3a5f25be67ffcff5f67a224a6bb46611e6f4f3981196e2abfa74&" alt="Skibidi Toilet 72 Full episode">
+    <img src="https://i.postimg.cc/VvWwdDM0/GLPkh-9a-AAArimp.jpg" alt="Skibidi Toilet 72 Full episode">
     <div class="prose">
       <p>In the news</p>
-      <h2>Skibidi Toilet 73 (Part 1)</h2>
-      <a href="https://youtu.be/ajhQdw3Y6ws?si=L8XNmoZ4rHtr_xOg">Watch now!</a>
+      <h2>Skibidi Toilet 73 (Part 2)</h2>
+      <a href="https://youtube.com/watch?v=LCEhBBk080I">Watch now!</a>
       <p>● ○ ○ </p>
     </div>
   </div>
@@ -89,17 +89,17 @@
     <img src="https://steamuserimages-a.akamaihd.net/ugc/1018318128668295061/263B707C41B0CE0B5E951FD43C9A323FBA8BD1AA/?imw=1024&imh=576&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true" alt="72 part 2">
     <div class="prose">
       <p>Coming soon...</p>
-      <h2>Skibidi Toilet 73 (Part 2)</h2>
+      <h2>Skibidi Toilet 73 (Full episode)</h2>
       <a href="72.html">View info!</a>
       <p>○ ● ○ </p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://media.discordapp.net/attachments/1193270637876228218/1231353257956474933/maxresdefault_14.jpg?ex=6636a616&is=66243116&hm=176d3da990e56711e59e776bf860bddb7ef987b65e188ab0531ed5b338807950&" alt="ST72 AstroEmperorToilet">
+    <img src="https://i.postimg.cc/8cSDpqFV/pou2p991h2wc1.jpg" alt="ST72 AstroEmperorToilet">
     <div class="prose">
-      <p>Temporal rebirth</p>
-      <h2>Code name: <b><i>Scientist Project</i></b></h2>
+      <p>Coming soon...</p>
+      <h2>Skibidi Toilet 74</h2>
       <p>○ ○ ● </p>
     </div>
       </div>
@@ -114,9 +114,8 @@
   <p>Want to know the full skibidi toilet storyline? <a href="storyline.html">click here </a>to access to the storyline!</p>
 </section>
     <section>
-      <h2>Document [73]</h2>
+      <h2>Document [74]</h2>
       <p>Coming soon...</p>
-      <p>More information <a href="72.html">here!</a></p>
     </section>
       <section>
       <h2>Document [Dark Tie]</h2>
@@ -140,7 +139,7 @@
     <td colspan="2"><h4>Subscription goal to achieve:</h4></td>
   </tr>
   <tr>
-    <td>1500</td>
+    <td>1500 (soon)</td>
     <td>2000</td>
   </tr>
   <tr>
@@ -188,6 +187,7 @@
       <th scope="col">Members</th>
       <th scope="col">Leader</th>
       <th scope="col">Sign</th>
+      <th scope="col">First appears</th>
     </tr>
   </thead>
   <tbody>
@@ -196,36 +196,51 @@
       <td>Unknown</td>
       <td>G-Toilet</td>
       <td>Skibidi</td>
+      <td>Ep 0</td>
     </tr>
     <tr>
       <th scope="row">Astro Team</th>
       <td>3</td>
       <td>Emperor Astro Toilet</td>
       <td>Three line helmet</td>
+      <td>ep 53</td>
     </tr>
     <tr>
-      <th scope="row">Alliance</th>
+      <th scope="row">Alliance<br>(Camera, Speaker, TV)</th>
       <td>Unknown - 3 team</td>
       <td>Alpha Hills Company</td>
-      <td>Thumb UP</td>
+      <td>Thumb UP<br>Dance<br>TV Face expression</td>
+      <td>ep 7<br>ep 24<br>ep 39</td>
     </tr>
     <tr>
       <th scope="row">Neutral</th>
-      <td>Known: 1, the rest are unknown</td>
+      <td>Known: 1<br>the rest are unknown</td>
       <td>Agent Blugray</td>
       <td>Unknown</td>
+      <td>ep 3</td>
     </tr>
      <tr>
       <th scope="row">NakedKitchen</th>
       <td>Known: 1</td>
       <td>Microwave Man</td>
       <td>Goofy ah</td>
+      <td>Troll leak</td>
+    </tr>
+    <tr>
+      <th scope="row">Alpha Hills company</th>
+      <td>Known: 11 <br>remaining known: 1</td>
+      <td>Administrator Agent Blugray</td>
+      <td>Thumbs up</td>
+      <td>ep 70</td>
     </tr>
   </tbody>
   <tfoot>
     <tr>
-      <th scope="row" colspan="3">Total number of teams</th>
-      <td>7</td>
+      <th scope="row" colspan="1">Information</th>
+      <td>team count: 8</td>
+      <td>Best: Agent Blugray</td>
+      <td>All the teams are offered a sign</td>
+      <td>First: Skibidi toilet</td>
     </tr>
   </tfoot>
 </table>
@@ -248,7 +263,7 @@
           <td><a href="https://youtube.com/@BlugrayGuy?sub_confirmation=1">Subscribe here!</a></td>
         </tr>
         <tr>
-          <td>- MirossOffYT</td>
+          <td>- MirossOffYT (Discode Studio)</td>
           <td><a href="https://youtube.com/@MirossOffYT?sub_confirmation=1">Subscribe here!</a></td>
         </tr>
       </table>
