--- a/index.html
+++ b/index.html
@@ -76,30 +76,29 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://i.postimg.cc/VvWwdDM0/GLPkh-9a-AAArimp.jpg" alt="Skibidi Toilet 72 Full episode">
+    <img src="https://i.postimg.cc/VvWwdDM0/GLPkh-9a-AAArimp.jpg" alt="Skibidi Toilet 73 Full episode">
     <div class="prose">
       <p>In the news</p>
-      <h2>Skibidi Toilet 73 (Part 2)</h2>
-      <a href="https://youtube.com/watch?v=LCEhBBk080I">Watch now!</a>
+      <h2>Skibidi Toilet 73</h2>
+      <a href="https://youtu.be/AJZIwDbJxPA?si=tfGeXR5GUKD0eZmQ">Watch now!</a>
       <p>● ○ ○ </p>
     </div>
   </div>
 
   <div class="slide">
-    <img src="https://steamuserimages-a.akamaihd.net/ugc/1018318128668295061/263B707C41B0CE0B5E951FD43C9A323FBA8BD1AA/?imw=1024&imh=576&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true" alt="72 part 2">
+    <img src="https://steamuserimages-a.akamaihd.net/ugc/1018318128668295061/263B707C41B0CE0B5E951FD43C9A323FBA8BD1AA/?imw=1024&imh=576&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true" alt="74">
     <div class="prose">
       <p>Coming soon...</p>
-      <h2>Skibidi Toilet 73 (Full episode)</h2>
-      <a href="72.html">View info!</a>
+      <h2>Skibidi Toilet 74</h2>
       <p>○ ● ○ </p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://i.postimg.cc/8cSDpqFV/pou2p991h2wc1.jpg" alt="ST72 AstroEmperorToilet">
+    <img src="https://i.postimg.cc/VLYDyR2v/Screenshot-2024-05-10-10-08-28-561-com-google-android-youtube-edit.jpg" alt="Army and Alpha Hills Teams">
     <div class="prose">
-      <p>Coming soon...</p>
-      <h2>Skibidi Toilet 74</h2>
+      <p>New discovery</p>
+      <h2>Army</h2>
       <p>○ ○ ● </p>
     </div>
       </div>
@@ -228,16 +227,23 @@
     </tr>
     <tr>
       <th scope="row">Alpha Hills company</th>
-      <td>Known: 11 <br>remaining known: 1</td>
+      <td>Known: 11 <br>remaining known: 18</td>
       <td>Administrator Agent Blugray</td>
       <td>Thumbs up</td>
       <td>ep 70</td>
+    </tr>
+    <tr>
+      <th scope="row">Army</th>
+      <td>Known 27</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>ep 3 - back ep 73</td>
     </tr>
   </tbody>
   <tfoot>
     <tr>
       <th scope="row" colspan="1">Information</th>
-      <td>team count: 8</td>
+      <td>team count: 9</td>
       <td>Best: Agent Blugray</td>
       <td>All the teams are offered a sign</td>
       <td>First: Skibidi toilet</td>
@@ -285,7 +291,7 @@
 
   </main>
   <div class="floating-video">
-<iframe width="360" height="205" src="https://www.youtube-nocookie.com/embed/d7DdLRe5QgM?si=Jwd1IvurNaMZJj8k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="360" height="205" src="https://www.youtube.com/embed/AJZIwDbJxPA?si=7WpVTrCR2C644VI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </body>
 <audio id="backgroundMusic" autoplay loop>
