--- a/index.html
+++ b/index.html
@@ -1,1 +1,332 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta name="font" content="Shadded South, fantasy">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BlugrayGuy.com</title>
+  
+  <div class="right"><a href="https://github.com/BlugrayGuyLegit/Skibidi-toilet-community/tree/main"><button>View on GitHub</button></a><a href="https://github.com/Discode-Studio"><button>View Keams OS Team</button></a><a href="https://github.com/BlugrayGuyLegit/Blugray/new/main/wiki"><button>Create a wiki page for free!</button></a><button onclick="connectWithDiscord()">Log in with Discord</button><button id="startAudio">Easter Egg </button></div>
+  
+  <meta property="title" content="Skibidi Toilet Community by blugrayGuy">
+    <meta property="description" content="Official BlugrayGuy.com by Blugray.">
+    <link rel="shortcut icon" href="astrologo.webp">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&">
+    <link rel="apple-touch-icon" href="https://media.discordapp.net/attachments/662665566200528906/1215021749352005662/Picsart_24-03-06_20-32-28-353.png?ex=65fb3c2f&is=65e8c72f&hm=75577cf9e5783dd6366d974f5b604c05953d964a59616c203a54eca275b9141d&">
+    <meta name="theme-color" content="#0000FF">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="BlugrayGuy.com">
+    <meta property="og:description" content="Skibidi Toilet Community by blugrayGuy is a website of secret about skibidi toilet and some information about Skibidi toilet and blugray...">
+    <meta property="og:site_name" content="BlugrayGuy.com">
+    <meta property="fb:title" content="BlugrayGuy.com">
+    <meta name="twitter:title" content="BlugrayGuy.com">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214915589861281843/Picsart_24-03-06_13-40-27-453.png?ex=65fad950&is=65e86450&hm=1f83e09bbb221e9931b5e160795adbadb060cc652ce7e46c30b42e0b0f6036ab&">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="search.css">
+    <style>
+    .warning-box {
+      background-color: #ffe6e6;
+      border: 3px solid #ff6666;
+      padding: 10px;
+      margin-bottom: 20px;
+      border-radius: 5px;
+    }
+    .warning-box button {
+      border: 0.8px solid black;
+      background-color: transparent;
+      padding-left: 5px;
+      padding-right: 5px;
+      border-radius: 5px;
+      color: blue;
+    }
+    .information {
+      border-image: linear-gradient(to right, indianred, red, darkred, red, indianred) 5;
+    }
+  </style>
+</head>
+
+<body>
+  <br>
+  <header>
+    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community - BlugrayGuy.com</h1></a>
+    <nav>
+      <ul>
+        <li><a href="https://linktr.ee/blugray">All Socials</a></li>
+        <li><a href="Blugray-console.html">Blugray Console</a></li>
+        <li><a href="summary.html">Skibidi Toilet Ep Summary</a></li>
+      </ul>
+    </nav>
+      <div class="search-container">
+  <input type="text" id="searchInput" placeholder="Search for a page...">
+    <button onclick="search()">Search</button>
+</div>
+<br>
+
+
+<div id="searchResults" style="display: none;">
+  <h2>Search results :</h2>
+  <u><ul id="resultsList"></ul></u>
+</div>
+  </header>
+
+  <main>
+<section>
+  <h2>Last news</h2><br>
+    <div class="slideshow">
+  <div class="slide">
+    <img src="https://i.postimg.cc/VvWwdDM0/GLPkh-9a-AAArimp.jpg" alt="Skibidi Toilet 73 Full episode">
+    <div class="prose">
+      <p>In the news</p>
+      <h2>Skibidi Toilet 73</h2>
+      <a href="https://youtu.be/AJZIwDbJxPA?si=tfGeXR5GUKD0eZmQ">Watch now!</a>
+      <p>● ○ ○ </p>
+    </div>
+  </div>
+
+  <div class="slide">
+    <img src="https://steamuserimages-a.akamaihd.net/ugc/1018318128668295061/263B707C41B0CE0B5E951FD43C9A323FBA8BD1AA/?imw=1024&imh=576&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true" alt="74">
+    <div class="prose">
+      <p>Coming soon...</p>
+      <h2>Skibidi Toilet 74</h2>
+      <p>○ ● ○ </p>
+    </div>
+  </div>
+
+      <div class="slide">
+    <img src="https://i.postimg.cc/VLYDyR2v/Screenshot-2024-05-10-10-08-28-561-com-google-android-youtube-edit.jpg" alt="Army and Alpha Hills Teams">
+    <div class="prose">
+      <p>New discovery</p>
+      <h2>Army</h2>
+      <p>○ ○ ● </p>
+    </div>
+      </div>
+
+  <!-- more show if needed -->
+
+
+    </div>
+</section>
+<section>
+  <h2>Skibidi Toilet Storylines</h2>
+  <p>Want to know the full skibidi toilet storyline? <a href="storyline.html">click here </a>to access to the storyline!</p>
+</section>
+    <section>
+      <h2>Document [74]</h2>
+      <p>Coming soon...</p>
+    </section>
+      <section>
+      <h2>Document [Dark Tie]</h2>
+      <p>Information about The Dark tie</p>
+      <p>The Dark Tie is a tie like all others tie exist but more strange, creepy and very dark... The Dark Tie is a secret tie there never appeared before but if you want more information <a href="dtst.html">click here !</a></p>
+    </section>
+    <section>
+      <table>
+  <tr>
+    <th colspan="2">Document [YouTube]</th>
+  </tr>
+  <tr>
+    <td colspan="2">Numbers of subscribers</td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2"><h4>Subscription goal to achieve:</h4></td>
+  </tr>
+  <tr>
+    <td>2000</td>
+    <td>3000</td>
+    </tr>
+    <tr>
+    <td>5000</td>
+    <td>10000</td>
+  </tr>
+  <tr>
+    <td>20000</td>
+    <td>50000</td>
+    <caption>BlugrayGuy.com</caption>
+  </tr>
+</table>
+  </section>
+  <section>
+    <h2>All Skibidi Toilet Series Teams</h2>
+    <section id="about">
+      <h3><img src="ToiletLogo.png" alt="Toilet Team" id="team"> •  Skibidi Toilet</h3>
+      <p>Team of Skibidi toilet... No important Information<br>The leaders of the skibidi toilet team is <b>G-Toilet</b>.</p>
+    </section>
+    <section id="about">
+      <h3><img src="astrologo.webp" alt="AstroTeam" id="team"> • AstroTeam</h3>
+      <p>The AstroTeam is a team made up of 3 members, the Astro Toilet and the UFO Toilet and the leader of the AstroToilet is <b>Astro Emperor Toilet</b>.</p>
+    </section>
+   <section id="about">
+      <h3><img src="CameraLogo.png" alt="Cameraman" id="team"> | <img src="SpeakerLogo.png" alt="SpeakerMan" id="team"> | <img src="TVLogo.png" alt="TVMan" id="team"> • Alliance</h3>
+      <p>The alliance is a team with 3 group, the first group is the Cameraman group, the second is the Speaker group, and the last is the TV Man group. The leader of the alliance is <b>Alpha Hills Company</b></p>
+    </section>
+    <section id="about">
+      <h3><img src="HumanLogo.png" alt"Neutral (formerly HumanTeam)" id="team"> • Neutral</h3>
+      <p>The neutral team is for now unknown, only things we know is the neutral team was owned by the government and the QG is on Alpha Hills Labs. The actual leader is <b>Blugray / Government</b></p>
+    </section>
+    <section id="about">
+      <h3>[?] • NakedKitchen Team</h3>
+      <p>Made up of Naked Kitchenmen, this new group will appear in future episodes to come.<br>
+      Actually we don't have <b>no information</b> about this team, expect that come on some troll skibidi toilet episodes...</p>
+    </section>
+  <section>
+   <table>
+  <caption>
+    Copyright 2024 BlugrayGuy.com©
+  </caption>
+  <thead>
+    <tr>
+      <th scope="col">Team names</th>
+      <th scope="col">Members</th>
+      <th scope="col">Leader</th>
+      <th scope="col">Sign</th>
+      <th scope="col">First appears</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Skibidi Toilet</th>
+      <td>Unknown</td>
+      <td>G-Toilet</td>
+      <td>Skibidi</td>
+      <td>Ep 0</td>
+    </tr>
+    <tr>
+      <th scope="row">Astro Team</th>
+      <td>3</td>
+      <td>Emperor Astro Toilet</td>
+      <td>Three line helmet</td>
+      <td>ep 53</td>
+    </tr>
+    <tr>
+      <th scope="row">Alliance<br>(Camera, Speaker, TV)</th>
+      <td>Unknown - 3 team</td>
+      <td>Alpha Hills Company</td>
+      <td>Thumb UP<br>Dance<br>TV Face expression</td>
+      <td>ep 7<br>ep 24<br>ep 39</td>
+    </tr>
+    <tr>
+      <th scope="row">Neutral</th>
+      <td>Known: 1<br>the rest are unknown</td>
+      <td>Agent Blugray</td>
+      <td>Unknown</td>
+      <td>ep 3</td>
+    </tr>
+     <tr>
+      <th scope="row">NakedKitchen</th>
+      <td>Known: 1</td>
+      <td>Microwave Man</td>
+      <td>Goofy ah</td>
+      <td>Troll leak</td>
+    </tr>
+    <tr>
+      <th scope="row">Alpha Hills company</th>
+      <td>Known: 11 <br>remaining known: 18</td>
+      <td>Administrator Agent Blugray</td>
+      <td>Thumbs up</td>
+      <td>ep 70</td>
+    </tr>
+    <tr>
+      <th scope="row">Army</th>
+      <td>Known 27</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>ep 3 - back ep 73</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th scope="row" colspan="1">Information</th>
+      <td>team count: 9</td>
+      <td>Best: Agent Blugray</td>
+      <td>All the teams are offered a sign</td>
+      <td>First: Skibidi toilet</td>
+    </tr>
+  </tfoot>
+</table>
+  </section>
+    </section>
+ <section>
+<table>
+  <tr>
+    <th colspan="2">Website's credits</th>
+  </tr>
+  <tr>
+    <td colspan="2">Credits of all developers and contributors</td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <h3>Developers</h3>
+      <table>
+        <tr>
+          <td>- BlugrayGuy</td>
+          <td><a href="https://youtube.com/@BlugrayGuy?sub_confirmation=1">Subscribe here!</a></td>
+        </tr>
+        <tr>
+          <td>- MirossOffYT (Discode Studio)</td>
+          <td><a href="https://youtube.com/@MirossOffYT?sub_confirmation=1">Subscribe here!</a></td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">
+      <h3>Contributors</h3>
+      <table>
+        <tr>
+          <td>- DaFuq!?Boom!</td>
+          <td><a href="https://youtube.com/@DaFuqBoom?sub_confirmation=1">Subscribe here!</a></td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+    </section>
+
+  </main>
+  <div class="floating-video">
+<iframe width="360" height="205" src="https://www.youtube.com/embed/AJZIwDbJxPA?si=7WpVTrCR2C644VI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+</body>
+<audio id="backgroundMusic" autoplay loop>
+  <source src="/hl2_song30.mp3">
+  Your browser does not support the audio element.
+</audio>
+<script>
+document.getElementById("startAudio").addEventListener("click", function() {
+  var audio = document.getElementById("backgroundMusic");
+  audio.play();
+});
+</script>
+<script>
+var slideIndex = 0;
+  showSlides();
+
+  function showSlides() {
+    var i;
+    var slides = document.getElementsByClassName("slide");
+    for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+    }
+    slideIndex++;
+    if (slideIndex > slides.length) {slideIndex = 1}
+    slides[slideIndex-1].style.display = "block";
+    setTimeout(showSlides, 5000);
+  }
+</script>
+<script src="ex-sraw.js"></script>
+    <script>
+        function connectWithDiscord() {
+            
+            window.location.href = 'https://discord.com/oauth2/authorize?client_id=1221431219217109024&response_type=code&redirect_uri=https%3A%2F%2Fblugrayguylegit.github.io%2FBlugray%2F&scope=identify+guilds.join+connections';
+        }
+    </script>
+
+</html>
