Update blugray section

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -87,7 +86,7 @@
   </div>
 
   <div class="slide">
-    <img src="https://steamuserimages-a.akamaihd.net/ugc/1018318128668295061/263B707C41B0CE0B5E951FD43C9A323FBA8BD1AA/?imw=1024&imh=576&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true" alt="74">
+    <img src="https://i.postimg.cc/FsKqYH0c/Picsart-24-05-17-18-32-41-205.jpg" alt="74">
     <div class="prose">
       <p>Coming soon...</p>
       <h2>Skibidi Toilet 74</h2>
@@ -125,31 +124,78 @@
     <section>
       <table>
   <tr>
-    <th colspan="2">Document [YouTube]</th>
+    <th colspan="2">Subscriber</th>
+    <th colspan="2">View</th>
   </tr>
   <tr>
-    <td colspan="2">Numbers of subscribers</td>
+    <td colspan="2">Subscribers live count</td>
+    <td colspan="2">Channel view live count</td>
   </tr>
   <tr>
     <td colspan="2">
-      <iframe height="90px" width="310px" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe>
+      <iframe height="90px" width="auto" frameborder="0" src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" allowFullScreen></iframe>
+    </td>
+    <td colspan="2">
+      <iframe src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?counter=1&style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" height="90px" width="auto" frameborder="0"></iframe>
     </td>
   </tr>
   <tr>
     <td colspan="2"><h4>Subscription goal to achieve:</h4></td>
+    <td colspan="2"><h4>Channel view goal to achieve:</h4></td>
   </tr>
   <tr>
     <td>2000</td>
     <td>3000</td>
+    <td>70000</td>
+    <td>100000</td>
     </tr>
     <tr>
     <td>5000</td>
     <td>10000</td>
+    <td>300000</td>
+    <td>500000</td>
   </tr>
   <tr>
     <td>20000</td>
     <td>50000</td>
-    <caption>BlugrayGuy.com</caption>
+    <td>700000</td>
+    <td>1000000+</td>
+  </tr>
+  <tr>
+    <td colspan="4">Other section</td>
+    </tr>
+  <tr>
+        <th colspan="4">Video</th>
+  </tr>
+  <tr>
+    <td colspan="4">Videos live count</td>
+  </tr>
+  <tr>
+    <td colspan="4">
+      <iframe src="https://socialcounts.org/youtube-live-subscriber-count/UCl5a9XEa7LQXxncMs7uleWQ/embed?counter=2&style=body%7Bbackground-color%3Argba%280%2C0%2C0%2C0%29%21important%7D" frameborder="0" height="90px" width="650px"></iframe>
+    </td>
+  </tr>
+  <tr>
+    <td colspan="4">Videos count to achieve:</td>
+  </tr>
+  <tr>
+    <td>60</td>
+    <td>80</td>
+    <td>100</td>
+    <td>150</td>
+  </tr>
+  <tr>
+    <td>200</td>
+    <td>300</td>
+    <td>400</td>
+    <td>500</td>
+  </tr>
+  <tr>
+    <td>700</td>
+    <td>1000</td>
+    <td>1500</td>
+    <td>2000</td>
+    <caption><a href="https://youtube.com/@BlugrayGuy/featured">BlugrayGuy.com</a></caption>
   </tr>
 </table>
   </section>
