--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
   </header>
 
   <main>
+    <section>
+      watch the steak's stream getting official information from dafuqboom himself here!
+    <iframe src="https://www.youtube.com/embed/RYM18orvNgE?si=34QYh8zYz4zNxU4f" height="500px" width="850px"></iframe>
+    </section>
 <section>
   <h2>Last news</h2><br>
     <div class="slideshow">
