--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <main>
     <section>
       watch the steak's stream getting official information from dafuqboom himself here!
-    <iframe src="https://www.youtube.com/embed/RYM18orvNgE?si=34QYh8zYz4zNxU4f" height="500px" width="850px"></iframe>
+    <iframe src="https://www.youtube.com/embed/RYM18orvNgE?si=34QYh8zYz4zNxU4f" height="400px" width="815px"></iframe>
     </section>
 <section>
   <h2>Last news</h2><br>
@@ -289,6 +289,13 @@
       <td>Unknown</td>
       <td>Unknown</td>
       <td>ep 3 - back ep 73</td>
+    </tr>
+    <tr>
+      <th scope="row">Unknown</th>
+      <td>Titan "Unknown..."</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>Soon...</td>
     </tr>
   </tbody>
   <tfoot>
