--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <tr>
       <th scope="row">Astro Team</th>
       <td>3</td>
-      <td>Emperor Astro Toilet</td>
+      <td>Juggernaut Astro Toilet</td>
       <td>Three line helmet</td>
       <td>ep 53</td>
     </tr>
