--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     }
   </style>
 </head>
-# aaa
+
 <body>
   <br>
   <header>
@@ -81,7 +81,7 @@
       <p>In the news</p>
       <h2>Skibidi Toilet 73</h2>
       <a href="https://youtu.be/AJZIwDbJxPA?si=tfGeXR5GUKD0eZmQ">Watch now!</a>
-      <p>● ○ ○ </p>
+      <p>● ○ ○ ○</p>
     </div>
   </div>
 
@@ -90,7 +90,7 @@
     <div class="prose">
       <p>Coming soon...</p>
       <h2>Skibidi Toilet 74</h2>
-      <p>○ ● ○ </p>
+      <p>○ ● ○ ○</p>
     </div>
   </div>
 
@@ -99,8 +99,17 @@
     <div class="prose">
       <p>New discovery</p>
       <h2>Army</h2>
-      <p>○ ○ ● </p>
+      <p>○ ○ ● ○</p>
     </div>
+      </div>
+      
+      <div class="slide">
+        <img src="https://i.postimg.cc/x8jzhPv7/Picsart-24-05-27-08-11-33-273.jpg" alt="74.png">
+        <div class="prose">
+          <p>New leaks!</p>
+          <h2>Secret kept hidden will change everything...</h2>
+          <p>○ ○ ○ ●</p>
+        </div>
       </div>
 
   <!-- more show if needed -->
@@ -247,7 +256,7 @@
     <tr>
       <th scope="row">Astro Team</th>
       <td>3</td>
-      <td>Juggernaut Astro Toilet</td>
+      <td>Emperor Astro Toilet</td>
       <td>Three line helmet</td>
       <td>ep 53</td>
     </tr>
