Update 72.html sync to 74

--- a/72.html
+++ b/72.html
@@ -1,1 +1,43 @@
-Update in progress, waiting for information...
+<head>
+    <meta charset="UTF-08">
+    <link rel="stylesheet" href="style.css">
+        <title>Information: Skibidi Toilet 74</title>
+    </head>
+    <body>
+      <header>
+        <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community</h1><h5>By blugrayGuy</h5><br></a>
+        <nav>
+          <ul>
+            <li><a href="https://linktr.ee/blugray">All Socials</a></li>
+            <li><a href="Blugray-console.html">Blugray Console</a></li>
+            <li><a href="summary.html">Skibidi Toilet Ep Summary</a></li>
+          </ul>
+        </nav>
+      </header>
+    <section>
+      <section id="uptitle">
+    <h1>Skibidi toilet 74</h1>
+      </section>
+    <br>
+    <section>
+    <h4>Information about:</h4>
+    <p>
+      > Type of episodes: long<br>
+      > Environment: desert<br>
+      > duration: 6+ minutes <br>
+      > publications: premiere<br>
+      > shorts version: unknown<br>
+      > new character: true<br>
+      > Astros back!
+    </p>
+    </section>
+    <br>
+    <section id="about">
+      <h1>Information about the episode</h1>
+        <p>
+          Titan and Gman fight untill somethings who will change everythings will stop them...<br>
+          Then the Astros back...
+        </p>
+    </section>
+    </section>
+    </body>
