--- a/farewellmrp.html
+++ b/farewellmrp.html
@@ -105,7 +105,7 @@ Too long for this plane I'm leaving
 Where I'll bet you be free feeling
 Where no every maniac can be leaning
 where the difference no rhythms of the killing
-Too long for the plane I'm leaving
+So long for the plane I'm leaving
 Where election gives people feeling
 Where no every maniac can be leaning
 See the shoot on my ears... (Farewell mr.p)
@@ -114,9 +114,8 @@ Too long for this plane I'm leaving
 Where I'll let you leave people feeling
 Where no every maniac can be leaning
 where the difference no rhythms of the killing
-Sl long for the plane I'm leaving
+So long for the plane I'm leaving
 Where I'll let you leave people feeling
-See the shoot on my ears... (Farewell mr.p)
 Sing for the last time...
 Farewell Mr.p (Farewell Mr.p)
 Goodbye mr.p (farewell mr.p)
