--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://i.postimg.cc/VvWwdDM0/GLPkh-9a-AAArimp.jpg" alt="Skibidi Toilet 73 Full episode">
+    <img src="https://yt3.ggpht.com/VzwJae9uIeqh5GRbO1AkqczDd9_TVMGlnZ93HfK6_FhC1W_n1z3hmgSCNUM_u3RZ9CKTy3kNZDzcMFk=s1920-nd-v1" alt="Skibidi toilet 74">
     <div class="prose">
       <p>In the news</p>
-      <h2>Skibidi Toilet 73</h2>
-      <a href="https://youtu.be/AJZIwDbJxPA?si=tfGeXR5GUKD0eZmQ">Watch now!</a>
-      <p>● ○ ○ ○</p>
+      <h2>Skibidi Toilet 74</h2>
+      <a href="https://youtu.be/W_hsGsd39Kg">Watch now!</a>
+      <p>● ○ ○ </p>
     </div>
   </div>
 
@@ -89,27 +89,18 @@
     <img src="https://i.postimg.cc/FsKqYH0c/Picsart-24-05-17-18-32-41-205.jpg" alt="74">
     <div class="prose">
       <p>Coming soon...</p>
-      <h2>Skibidi Toilet 74</h2>
-      <p>○ ● ○ ○</p>
+      <h2>Skibidi Toilet Season 24</h2>
+      <p>○ ● ○ </p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://i.postimg.cc/VLYDyR2v/Screenshot-2024-05-10-10-08-28-561-com-google-android-youtube-edit.jpg" alt="Army and Alpha Hills Teams">
+    <img src="https://yt3.ggpht.com/VzwJae9uIeqh5GRbO1AkqczDd9_TVMGlnZ93HfK6_FhC1W_n1z3hmgSCNUM_u3RZ9CKTy3kNZDzcMFk=s1920-nd-v1" alt="Astro arc">
     <div class="prose">
-      <p>New discovery</p>
-      <h2>Army</h2>
-      <p>○ ○ ● ○</p>
+      <p>New chapter</p>
+      <h2>Astro arc begun</h2>
+      <p>○ ○ ● </p>
     </div>
-      </div>
-      
-      <div class="slide">
-        <img src="https://i.postimg.cc/x8jzhPv7/Picsart-24-05-27-08-11-33-273.jpg" alt="74.png">
-        <div class="prose">
-          <p>New leaks!</p>
-          <h2>Secret kept hidden will change everything...</h2>
-          <p>○ ○ ○ ●</p>
-        </div>
       </div>
 
   <!-- more show if needed -->
@@ -122,7 +113,7 @@
   <p>Want to know the full skibidi toilet storyline? <a href="storyline.html">click here </a>to access to the storyline!</p>
 </section>
     <section>
-      <h2>Document [74]</h2>
+      <h2>Document [75]</h2>
       <p>Coming soon...</p>
     </section>
       <section>
@@ -153,10 +144,10 @@
     <td colspan="2"><h4>Channel view goal to achieve:</h4></td>
   </tr>
   <tr>
-    <td>2000</td>
     <td>3000</td>
-    <td>70000</td>
-    <td>100000</td>
+    <td>4000</td>
+    <td>150000</td>
+    <td>200000</td>
     </tr>
     <tr>
     <td>5000</td>
@@ -216,7 +207,7 @@
     </section>
     <section id="about">
       <h3><img src="astrologo.webp" alt="AstroTeam" id="team"> • AstroTeam</h3>
-      <p>The AstroTeam is a team made up of 3 members, the Astro Toilet and the UFO Toilet and the leader of the AstroToilet is <b>Astro Emperor Toilet</b>.</p>
+      <p>The AstroTeam is a team made up of 3 members, the Astro Toilet and the UFO Toilet and the leader of the AstroToilet is <b>Astro Toilet Mothership</b>.</p>
     </section>
    <section id="about">
       <h3><img src="CameraLogo.png" alt="Cameraman" id="team"> | <img src="SpeakerLogo.png" alt="SpeakerMan" id="team"> | <img src="TVLogo.png" alt="TVMan" id="team"> • Alliance</h3>
@@ -255,10 +246,10 @@
     </tr>
     <tr>
       <th scope="row">Astro Team</th>
-      <td>3</td>
-      <td>Emperor Astro Toilet</td>
-      <td>Three line helmet</td>
-      <td>ep 53</td>
+      <td>15+</td>
+      <td>Astro Toilet Mothership</td>
+      <td>Titanium helmet</td>
+      <td>ep 33</td>
     </tr>
     <tr>
       <th scope="row">Alliance<br>(Camera, Speaker, TV)</th>
@@ -296,7 +287,7 @@
       <td>ep 3 - back ep 73</td>
     </tr>
     <tr>
-      <th scope="row">Unknown</th>
+      <th scope="row">Unknown (possible computer race)</th>
       <td>Titan "Unknown..."</td>
       <td>Unknown</td>
       <td>Unknown</td>
@@ -354,7 +345,7 @@
 
   </main>
   <div class="floating-video">
-<iframe width="360" height="205" src="https://www.youtube.com/embed/AJZIwDbJxPA?si=7WpVTrCR2C644VI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="360" height="205" src="https://www.youtube.com/embed/W_hsGsd39Kg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </body>
 <audio id="backgroundMusic" autoplay loop>
