--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
   <br>
   <header>
-    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community - BlugrayGuy.com</h1></a>
+    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community • Official</h1></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
@@ -76,29 +76,29 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://yt3.ggpht.com/VzwJae9uIeqh5GRbO1AkqczDd9_TVMGlnZ93HfK6_FhC1W_n1z3hmgSCNUM_u3RZ9CKTy3kNZDzcMFk=s1920-nd-v1" alt="Skibidi toilet 74">
+    <img src="https://i.postimg.cc/mD760bmv/Picsart-24-06-24-12-53-55-877.jpg" alt="Skibidi toilet 75">
     <div class="prose">
       <p>In the news</p>
-      <h2>Skibidi Toilet 74</h2>
+      <h2>Skibidi Toilet 75</h2>
       <a href="https://youtu.be/W_hsGsd39Kg">Watch now!</a>
       <p>● ○ ○ </p>
     </div>
   </div>
 
   <div class="slide">
-    <img src="https://i.postimg.cc/FsKqYH0c/Picsart-24-05-17-18-32-41-205.jpg" alt="74">
+    <img src="https://i.postimg.cc/Sx32J84p/Picsart-24-06-24-13-05-22-265.jpg" alt="Coming soon episode - BlugrayGuy.com">
     <div class="prose">
       <p>Coming soon...</p>
-      <h2>Skibidi Toilet Season 24</h2>
+      <h2>Skibidi Toilet 76</h2>
       <p>○ ● ○ </p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://yt3.ggpht.com/VzwJae9uIeqh5GRbO1AkqczDd9_TVMGlnZ93HfK6_FhC1W_n1z3hmgSCNUM_u3RZ9CKTy3kNZDzcMFk=s1920-nd-v1" alt="Astro arc">
+    <img src="https://i.postimg.cc/1XPYSLTf/Picsart-24-06-24-12-53-05-851.jpg" alt="Team up">
     <div class="prose">
-      <p>New chapter</p>
-      <h2>Astro arc begun</h2>
+      <p>News</p>
+      <h2>Toilet and Alliance Team Up</h2>
       <p>○ ○ ● </p>
     </div>
       </div>
@@ -113,7 +113,7 @@
   <p>Want to know the full skibidi toilet storyline? <a href="storyline.html">click here </a>to access to the storyline!</p>
 </section>
     <section>
-      <h2>Document [75]</h2>
+      <h2>Document [76]</h2>
       <p>Coming soon...</p>
     </section>
       <section>
@@ -144,7 +144,7 @@
     <td colspan="2"><h4>Channel view goal to achieve:</h4></td>
   </tr>
   <tr>
-    <td>3000</td>
+    <td>✅ 3000</td>
     <td>4000</td>
     <td>150000</td>
     <td>200000</td>
@@ -179,7 +179,7 @@
     <td colspan="4">Videos count to achieve:</td>
   </tr>
   <tr>
-    <td>60</td>
+    <td>✅ 60</td>
     <td>80</td>
     <td>100</td>
     <td>150</td>
@@ -246,7 +246,7 @@
     </tr>
     <tr>
       <th scope="row">Astro Team</th>
-      <td>15+</td>
+      <td>50+</td>
       <td>Astro Toilet Mothership</td>
       <td>Titanium helmet</td>
       <td>ep 33</td>
@@ -287,17 +287,17 @@
       <td>ep 3 - back ep 73</td>
     </tr>
     <tr>
-      <th scope="row">Unknown (possible computer race)</th>
-      <td>Titan "Unknown..."</td>
+      <th scope="row">Alliance + Toilet Team-up</th>
+      <td>See alliance and toilet stat</td>
+      <td>Titan G-Toilet / Alliance</td>
       <td>Unknown</td>
-      <td>Unknown</td>
-      <td>Soon...</td>
+      <td>ep 75</td>
     </tr>
   </tbody>
   <tfoot>
     <tr>
       <th scope="row" colspan="1">Information</th>
-      <td>team count: 9</td>
+      <td>team count: 10</td>
       <td>Best: Agent Blugray</td>
       <td>All the teams are offered a sign</td>
       <td>First: Skibidi toilet</td>
@@ -345,7 +345,7 @@
 
   </main>
   <div class="floating-video">
-<iframe width="360" height="205" src="https://www.youtube.com/embed/W_hsGsd39Kg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="360" height="205" src="https://www.youtube.com/embed/A4ZbdU31KbQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </body>
 <audio id="backgroundMusic" autoplay loop>
@@ -382,4 +382,4 @@ var slideIndex = 0;
         }
     </script>
 
-</html>
+  </html>
