--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="prose">
       <p>In the news</p>
       <h2>Skibidi Toilet 75</h2>
-      <a href="https://youtu.be/W_hsGsd39Kg">Watch now!</a>
+      <a href="https://youtu.be/A4ZbdU31KbQ">Watch now!</a>
       <p>● ○ ○ </p>
     </div>
   </div>
