--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://i.postimg.cc/mD760bmv/Picsart-24-06-24-12-53-55-877.jpg" alt="Skibidi toilet 75">
+    <img src="https://i.postimg.cc/85yyJHrb/Picsart-24-07-07-00-44-38-264.jpg" alt="Skibidi toilet 76 (part 1)">
     <div class="prose">
       <p>In the news</p>
-      <h2>Skibidi Toilet 75</h2>
+      <h2>Skibidi Toilet 76 (part 1)</h2>
       <a href="https://youtu.be/A4ZbdU31KbQ">Watch now!</a>
       <p>● ○ ○ </p>
     </div>
@@ -89,13 +89,13 @@
     <img src="https://i.postimg.cc/Sx32J84p/Picsart-24-06-24-13-05-22-265.jpg" alt="Coming soon episode - BlugrayGuy.com">
     <div class="prose">
       <p>Coming soon...</p>
-      <h2>Skibidi Toilet 76</h2>
+      <h2>Skibidi Toilet 76 (part 2)</h2>
       <p>○ ● ○ </p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://i.postimg.cc/1XPYSLTf/Picsart-24-06-24-12-53-05-851.jpg" alt="Team up">
+    <img src="https://i.postimg.cc/6qyMdvrx/Picsart-24-07-07-02-17-47-940.jpg" alt="Team up">
     <div class="prose">
       <p>News</p>
       <h2>Toilet and Alliance Team Up</h2>
@@ -382,4 +382,4 @@ var slideIndex = 0;
         }
     </script>
 
-  </html>
+</html>
