--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
   <h2>Last news</h2><br>
     <div class="slideshow">
   <div class="slide">
-    <img src="https://i.postimg.cc/85yyJHrb/Picsart-24-07-07-00-44-38-264.jpg" alt="Skibidi toilet 76 (part 1)">
+    <img src="https://i.postimg.cc/V6JLPFQt/Picsart-24-07-23-17-30-06-509.jpg" alt="Skibidi toilet 76 (full episode)">
     <div class="prose">
       <p>In the news</p>
-      <h2>Skibidi Toilet 76 (part 1)</h2>
-      <a href="https://youtu.be/A4ZbdU31KbQ">Watch now!</a>
+      <h2>Skibidi Toilet 76 (full episode)</h2>
+      <a href="https://youtu.be/-74HbNnmf_s?si=k3fBnbZKxqvb1C29">Watch now!</a>
       <p>● ○ ○ </p>
     </div>
   </div>
@@ -89,16 +89,16 @@
     <img src="https://i.postimg.cc/Sx32J84p/Picsart-24-06-24-13-05-22-265.jpg" alt="Coming soon episode - BlugrayGuy.com">
     <div class="prose">
       <p>Coming soon...</p>
-      <h2>Skibidi Toilet 76 (part 2)</h2>
+      <h2>Skibidi Toilet 77</h2>
       <p>○ ● ○ </p>
     </div>
   </div>
 
       <div class="slide">
-    <img src="https://i.postimg.cc/6qyMdvrx/Picsart-24-07-07-02-17-47-940.jpg" alt="Team up">
+    <img src="https://i.postimg.cc/nhnFhxfp/Picsart-24-07-23-17-29-50-827.jpg" alt="Astro Duchess">
     <div class="prose">
       <p>News</p>
-      <h2>Toilet and Alliance Team Up</h2>
+      <h2>Astro Duchess</h2>
       <p>○ ○ ● </p>
     </div>
       </div>
@@ -349,7 +349,7 @@
 </div>
 </body>
 <audio id="backgroundMusic" autoplay loop>
-  <source src="/hl2_song30.mp3">
+  <source src="hl2_song30.mp3">
   Your browser does not support the audio element.
 </audio>
 <script>
@@ -381,5 +381,9 @@ var slideIndex = 0;
             window.location.href = 'https://discord.com/oauth2/authorize?client_id=1221431219217109024&response_type=code&redirect_uri=https%3A%2F%2Fblugrayguylegit.github.io%2FBlugray%2F&scope=identify+guilds.join+connections';
         }
     </script>
-
+<footer>
+  <img src="Keams.png" alt="Keams" id="kkpng"> <h2>Powered by KeamsOS ©2024 Discode-Studio, all rights reserved.</h2>
+  <h3>The name KeamsOS Keams KeamsCore KeamsApp are affiliated brands and reserved to Discorde Studio.</h3>
+</footer>
+<br><br>
 </html>
