--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BlugrayGuy.com</title>
   
-  <div class="right"><a href="https://github.com/BlugrayGuyLegit/Skibidi-toilet-community/tree/main"><button>View on GitHub</button></a><a href="https://github.com/Discode-Studio"><button>View Keams OS Team</button></a><a href="https://github.com/BlugrayGuyLegit/Blugray/new/main/wiki"><button>Create a wiki page for free!</button></a><button onclick="connectWithDiscord()">Log in with Discord</button><button id="startAudio">Easter Egg </button></div>
+  <div class="right"><a href="https://github.com/BlugrayGuyLegit/Blugray/new/main/wiki"><button>Create a wiki page for free!</button></a></div>
   
-  <meta property="title" content="Skibidi Toilet Community by blugrayGuy">
+  <meta property="title" content="BlugrayGuy Website">
     <meta property="description" content="Official BlugrayGuy.com by Blugray.">
     <link rel="shortcut icon" href="astrologo.webp">
     <meta property="og:image" content="https://media.discordapp.net/attachments/1169330015423430696/1214657060076257280/Picsart_24-03-05_20-33-22-534.png?ex=65f9e88a&is=65e7738a&hm=1a0d4cb46d95c68bd3b5ba773e67e43bbbeed41845b9343f2a80a3214337b750&">
@@ -50,78 +50,89 @@
 <body>
   <br>
   <header>
-    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community • Official</h1></a>
-    <nav>
-      <ul>
-        <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-        <li><a href="Blugray-console.html">Blugray Console</a></li>
-        <li><a href="summary.html">Skibidi Toilet Ep Summary</a></li>
-      </ul>
-    </nav>
+    <a href="/index.html" id="Redirect"><h1>BlugrayGuy Website.</h1></a>
+    <details>
+     <summary>
+       Search 🔎 
+      </summary>
       <div class="search-container">
   <input type="text" id="searchInput" placeholder="Search for a page...">
     <button onclick="search()">Search</button>
 </div>
-<br>
-
-
+<br><br>
 <div id="searchResults" style="display: none;">
-  <h2>Search results :</h2>
+  <h2><br>> Search results</h2>
   <u><ul id="resultsList"></ul></u>
 </div>
+    </details>
   </header>
 
   <main>
-<section>
-  <h2>Last news</h2><br>
-    <div class="slideshow">
-  <div class="slide">
-    <img src="https://i.postimg.cc/V6JLPFQt/Picsart-24-07-23-17-30-06-509.jpg" alt="Skibidi toilet 76 (full episode)">
-    <div class="prose">
-      <p>In the news</p>
-      <h2>Skibidi Toilet 76 (full episode)</h2>
-      <a href="https://youtu.be/-74HbNnmf_s?si=k3fBnbZKxqvb1C29">Watch now!</a>
-      <p>● ○ ○ </p>
-    </div>
+    <br><br>
+  <!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <a href="/skibidi/lastest-video.html"><img class="imgrad" src="/images/76.jpg" style="width:100%"></a>
+    <div class="text"><p>Lastest episode</p><h2>Skibidi Toilet 76 (Full episode)</h2></div>
   </div>
 
-  <div class="slide">
-    <img src="https://i.postimg.cc/Sx32J84p/Picsart-24-06-24-13-05-22-265.jpg" alt="Coming soon episode - BlugrayGuy.com">
-    <div class="prose">
-      <p>Coming soon...</p>
-      <h2>Skibidi Toilet 77</h2>
-      <p>○ ● ○ </p>
-    </div>
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img class="imgrad" src="/images/soon.jpg" style="width:100%">
+    <div class="text"><p>Coming soon episode</p><h2>Skibidi Toilet 77 (part 1)</h2></div>
   </div>
 
-      <div class="slide">
-    <img src="https://i.postimg.cc/nhnFhxfp/Picsart-24-07-23-17-29-50-827.jpg" alt="Astro Duchess">
-    <div class="prose">
-      <p>News</p>
-      <h2>Astro Duchess</h2>
-      <p>○ ○ ● </p>
-    </div>
-      </div>
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img class="imgrad" src="/images/duchess.jpg" style="width:100%">
+    <div class="text"><p>New character</p><h2>Astro Duchess</h2></div>
+  </div>
 
-  <!-- more show if needed -->
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br><br><br>
 
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+  </main>
+  
+  <dialog open>
+  <h2>Welcome to the new BlugrayGuy Website!</h2>
+  <p>This is an experimental version and may contain some bugs, if you find one report it on the BlugrayGuy <a href="https://discord.com/invite/RcGF8M4M9H">Discord</a>!</p>
+  <form method="dialog">
+    <button>OK</button>
+  </form>
+</dialog>
 
-    </div>
-</section>
-<section>
-  <h2>Skibidi Toilet Storylines</h2>
-  <p>Want to know the full skibidi toilet storyline? <a href="storyline.html">click here </a>to access to the storyline!</p>
-</section>
-    <section>
-      <h2>Document [76]</h2>
-      <p>Coming soon...</p>
-    </section>
-      <section>
-      <h2>Document [Dark Tie]</h2>
-      <p>Information about The Dark tie</p>
-      <p>The Dark Tie is a tie like all others tie exist but more strange, creepy and very dark... The Dark Tie is a secret tie there never appeared before but if you want more information <a href="dtst.html">click here !</a></p>
-    </section>
-    <section>
+<section class="details-section">
+    <details>
+      <summary>
+        Main Pages
+      </summary>
+      <details>
+        <summary>
+          List by case
+        </summary>
+        <div class="links">
+          <a href="Skibidi">Skibidi Toilet</a>
+          <a href="Blugray">Blugray</a>
+          <a href="Miscellaneous">Miscellaneous</a>
+          <a href="Wiki">Wiki</a>
+        </div>
+      </details>
+    </details>
+  </section>
+  
+  <section>
       <table>
   <tr>
     <th colspan="2">Subscriber</th>
@@ -162,9 +173,6 @@
     <td>1000000+</td>
   </tr>
   <tr>
-    <td colspan="4">Other section</td>
-    </tr>
-  <tr>
         <th colspan="4">Video</th>
   </tr>
   <tr>
@@ -199,150 +207,57 @@
   </tr>
 </table>
   </section>
-  <section>
-    <h2>All Skibidi Toilet Series Teams</h2>
-    <section id="about">
-      <h3><img src="ToiletLogo.png" alt="Toilet Team" id="team"> •  Skibidi Toilet</h3>
-      <p>Team of Skibidi toilet... No important Information<br>The leaders of the skibidi toilet team is <b>G-Toilet</b>.</p>
-    </section>
-    <section id="about">
-      <h3><img src="astrologo.webp" alt="AstroTeam" id="team"> • AstroTeam</h3>
-      <p>The AstroTeam is a team made up of 3 members, the Astro Toilet and the UFO Toilet and the leader of the AstroToilet is <b>Astro Toilet Mothership</b>.</p>
-    </section>
-   <section id="about">
-      <h3><img src="CameraLogo.png" alt="Cameraman" id="team"> | <img src="SpeakerLogo.png" alt="SpeakerMan" id="team"> | <img src="TVLogo.png" alt="TVMan" id="team"> • Alliance</h3>
-      <p>The alliance is a team with 3 group, the first group is the Cameraman group, the second is the Speaker group, and the last is the TV Man group. The leader of the alliance is <b>Alpha Hills Company</b></p>
-    </section>
-    <section id="about">
-      <h3><img src="HumanLogo.png" alt"Neutral (formerly HumanTeam)" id="team"> • Neutral</h3>
-      <p>The neutral team is for now unknown, only things we know is the neutral team was owned by the government and the QG is on Alpha Hills Labs. The actual leader is <b>Blugray / Government</b></p>
-    </section>
-    <section id="about">
-      <h3>[?] • NakedKitchen Team</h3>
-      <p>Made up of Naked Kitchenmen, this new group will appear in future episodes to come.<br>
-      Actually we don't have <b>no information</b> about this team, expect that come on some troll skibidi toilet episodes...</p>
-    </section>
-  <section>
-   <table>
-  <caption>
-    Copyright 2024 BlugrayGuy.com©
-  </caption>
-  <thead>
-    <tr>
-      <th scope="col">Team names</th>
-      <th scope="col">Members</th>
-      <th scope="col">Leader</th>
-      <th scope="col">Sign</th>
-      <th scope="col">First appears</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">Skibidi Toilet</th>
-      <td>Unknown</td>
-      <td>G-Toilet</td>
-      <td>Skibidi</td>
-      <td>Ep 0</td>
-    </tr>
-    <tr>
-      <th scope="row">Astro Team</th>
-      <td>50+</td>
-      <td>Astro Toilet Mothership</td>
-      <td>Titanium helmet</td>
-      <td>ep 33</td>
-    </tr>
-    <tr>
-      <th scope="row">Alliance<br>(Camera, Speaker, TV)</th>
-      <td>Unknown - 3 team</td>
-      <td>Alpha Hills Company</td>
-      <td>Thumb UP<br>Dance<br>TV Face expression</td>
-      <td>ep 7<br>ep 24<br>ep 39</td>
-    </tr>
-    <tr>
-      <th scope="row">Neutral</th>
-      <td>Known: 1<br>the rest are unknown</td>
-      <td>Agent Blugray</td>
-      <td>Unknown</td>
-      <td>ep 3</td>
-    </tr>
-     <tr>
-      <th scope="row">NakedKitchen</th>
-      <td>Known: 1</td>
-      <td>Microwave Man</td>
-      <td>Goofy ah</td>
-      <td>Troll leak</td>
-    </tr>
-    <tr>
-      <th scope="row">Alpha Hills company</th>
-      <td>Known: 11 <br>remaining known: 18</td>
-      <td>Administrator Agent Blugray</td>
-      <td>Thumbs up</td>
-      <td>ep 70</td>
-    </tr>
-    <tr>
-      <th scope="row">Army</th>
-      <td>Known 27</td>
-      <td>Unknown</td>
-      <td>Unknown</td>
-      <td>ep 3 - back ep 73</td>
-    </tr>
-    <tr>
-      <th scope="row">Alliance + Toilet Team-up</th>
-      <td>See alliance and toilet stat</td>
-      <td>Titan G-Toilet / Alliance</td>
-      <td>Unknown</td>
-      <td>ep 75</td>
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <th scope="row" colspan="1">Information</th>
-      <td>team count: 10</td>
-      <td>Best: Agent Blugray</td>
-      <td>All the teams are offered a sign</td>
-      <td>First: Skibidi toilet</td>
-    </tr>
-  </tfoot>
-</table>
-  </section>
-  </section>
-  </main>
-<audio id="backgroundMusic" autoplay loop>
-  <source src="hl2_song30.mp3">
-  Your browser does not support the audio element.
-</audio>
+  
 <script>
-document.getElementById("startAudio").addEventListener("click", function() {
-  var audio = document.getElementById("backgroundMusic");
-  audio.play();
-});
-</script>
-<script>
-var slideIndex = 0;
-  showSlides();
+let slideIndex = 1;
+let autoSlideInterval;
 
-  function showSlides() {
-    var i;
-    var slides = document.getElementsByClassName("slide");
-    for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-    }
-    slideIndex++;
-    if (slideIndex > slides.length) {slideIndex = 1}
-    slides[slideIndex-1].style.display = "block";
-    setTimeout(showSlides, 5000);
+function initSlides() {
+  showSlides(slideIndex);
+  autoSlideInterval = setInterval(() => plusSlides(1), 5000); // Change image every 2 seconds
+}
+
+function plusSlides(n) {
+  clearInterval(autoSlideInterval);
+  showSlides(slideIndex += n);
+  autoSlideInterval = setInterval(() => plusSlides(1), 5000); // Restart auto sliding
+}
+
+function currentSlide(n) {
+  clearInterval(autoSlideInterval);
+  showSlides(slideIndex = n);
+  autoSlideInterval = setInterval(() => plusSlides(1), 5000); // Restart auto sliding
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
   }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+}
+
+window.onload = initSlides;
 </script>
 <script src="ex-sraw.js"></script>
-    <script>
-        function connectWithDiscord() {
-            
-            window.location.href = 'https://discord.com/oauth2/authorize?client_id=1221431219217109024&response_type=code&redirect_uri=https%3A%2F%2Fblugrayguylegit.github.io%2FBlugray%2F&scope=identify+guilds.join+connections';
-        }
-    </script>
-<footer>
-  <img src="Keams.png" alt="Keams" id="kkpng"> <h2>Powered by KeamsOS ©2024 Discode-Studio, all rights reserved.</h2>
-  <h3>The name KeamsOS Keams KeamsCore KeamsApp are affiliated brands and reserved to Discorde Studio.</h3>
+<footer class="footer-container">
+  <div class="footer-content">
+    <img src="Keams.png" alt="Keams" id="kkpng">
+    <span>Powered by KeamsOS ©2024 Discode-Studio, all rights reserved.</span>
+  </div>
+  <nav class="footer-nav">
+    <ul>
+      <li><a href="https://linktr.ee/blugray">All Socials</a></li>
+      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
+    </ul>
+  </nav>
 </footer>
-<br><br>
 </html>
