Update and rename summary.html to skibidi/summary.html

--- a/skibidi/summary.html
+++ b/skibidi/summary.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
   <title>Summary</title>
 </head>
 
 <body>
   <header>
-    <a href="index.html" id="Redirect"><h1>Skibidi Toilet Community</h1><h5>By blugrayGuy</h5><br></a>
+    <a href="index.html" id="Redirect"><h1>BlugrayGuy Website</h1></a>
     <nav>
       <ul>
         <li><a href="https://linktr.ee/blugray">All Socials</a></li>
-        <li><a href="Blugray-console.html">Blugray Console</a></li>
-        <li><a href="summary.html">Skibidi Toilet Ep Summary</a></li>
+        <li><a href="Blugray-console.html">Blugray Console</a>
       </ul>
     </nav>
   </header>
+  <br><br><br><br>
  <section id="about">
    <h1>
      Summary of Skibidi Toilet 71
@@ -39,5 +39,16 @@
    </p>
  </section>
 </body>
-
+<footer class="footer-container">
+  <div class="footer-content">
+    <img src="/Keams.png" alt="Keams" id="kkpng">
+    <span>Powered by KeamsOS ©2024 Discode-Studio, all rights reserved.</span>
+  </div>
+  <nav class="footer-nav">
+    <ul>
+      <li><a href="https://linktr.ee/blugray">All Socials</a></li>
+      <li><a href="/blugray/Blugray-console.html">Blugray Console</a></li>
+    </ul>
+  </nav>
+</footer>
 </html>
